# Mirror_LEiDA

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
notebooks/: LEiDA_EEG_python.ipynb  LEiDA_EEG_python_sj1.ipynb  kmeans.ipynb  source_reconstruction_s1.ipynb  source_reconstruction_s1_ROI.ipynb  source_reconstruction_s1_stc.ipynb  visualizations_mock.ipynb  visualize_raw.ipynb
src/0_source_reconstruction/: batch_beamformer.py  batch_minimum_norm.py  source_recon_beamformer.py  source_recon_minimum_norm.py
src/1_leading_eigenvectors/: leading_beamformer.py  leida_eeg_analyzer.py  leida_eeg_analyzer_patched.py  run_leida_batch.py
src/2_clustering/: clustering.py  k-means.py  k-means_diametrical2.py  plot_clusters.py  plot_leida_clusters.py  plot_leida_clusters_patched.py  run_leida_diametrical_batch.py
src/3_Fractional_Occurrence/: leida_occurence_stats.py  run_source_leida_stats.py
src/3_state_metrics/: fo_dt.py  plot_significant_clusters.py  stats.py  stats_permutation.py  sumarize_results.py
src/archive/: leading_subjects.py  leading_subjects_eeg.py  plot_clusters_eeg.py  plot_source_leida.py
src/mirror_leida/: eeg_source_reconstruction.py  heatmap.py  k-means.py  leading_subjects.py  leading_subjects_eeg.py  leida_eeg_analyzer.py  leida_occurence_stats.py  reconstruction_subjects.py  rename.py  source_reconstruction.py  train.py
tests/: test_data.py
